# composable_kernel

./: .gitignore  .gitmodules  CMakeLists.txt
ck/composable_kernel/include/: gridwise_generic_reduction_wrapper_common.hpp
composable_kernel/include/: dynamic_gridwise_generic_reduction_first_call_method_chooser.hpp  dynamic_gridwise_generic_reduction_method_chooser.hpp  dynamic_gridwise_generic_reduction_second_call_method_chooser.hpp  dynamic_gridwise_generic_reduction_wrapper_common.hpp
composable_kernel/include/kernel_algorithm/: dynamic_gridwise_generic_2d_reduction_blockwise.hpp  dynamic_gridwise_generic_2d_reduction_direct_threadwise.hpp  dynamic_gridwise_generic_2d_reduction_direct_warpwise.hpp  dynamic_gridwise_generic_2d_reduction_multiblock.hpp  dynamic_gridwise_generic_reduction.hpp  dynamic_gridwise_generic_reduction_first_call.hpp  dynamic_gridwise_generic_reduction_second_call.hpp  dynamic_reduction_functions.cpp  dynamic_reduction_functions.hpp  (+4 more)
driver/: CMakeLists.txt  reduce_driver_olc.cpp  sequence_test.cpp
driver/include/: conv_tunables.hpp  dynamic_reduce_kernel_configurator.hpp  host_generic_reduction.hpp  host_reduce_util.hpp  olc_device_dynamic_generic_reduction.hpp  olc_reduce_common.hpp
host/: CMakeLists.txt
host/driver_online/: CMakeLists.txt  reduce_driver_online.cpp
host/driver_online/include/: generic_reduction_tunable.hpp  online_device_dynamic_generic_reduction.hpp  online_reduce_common.hpp
host/online_compilation/: CMakeLists.txt
host/online_compile/: CMakeLists.txt
script/: cmake-rocm.sh
(+41 files in other folders)
